src/style.css
* {
  box-sizing: border-box;
}

/* --- layout --- */
body {
  display: flex;
  height: 100vh;
  margin: 0;
  padding: 0;
}


.menu-panel,
.content {
  overflow: auto;
}

.menu-panel {
  flex-basis: 250px;
}

.content {
  flex-basis: 450px;
  flex-grow: 1;
  flex-shrink: 0;
}

@media screen and (max-width: 650px) {
  body {
    flex-wrap: wrap;
  }

  .menu-panel {
    flex-grow: 1;
  }
}

/* --- menu for link category selection --- */
.category-menu {
  padding: 10px 0;
}

.category-menu li:hover {
  background: lightgray;
}

.category-menu h2 {
  font-size: 1em;
  font-weight: normal;
}

.category-menu a {
  display: inline-block;
  width: 100%;
  padding: 10px 0 10px 20px;
  text-decoration: none;
  color: initial;
}

@media screen and (max-width: 650px) {
  .category-menu {
    height: 100vh;
    padding: 0;
  }

  .category-menu li:nth-child(even) {
    background: #eee;
  }

  .category-menu li:nth-child(odd) {
    background: lightgray;
  }
}

/* --- link category container --- */
.link-category h2 {
  text-align: center;
  font-weight: normal;
  font-size: 1.5em;
}


/* --- link list --- */
.link-list h3 {
  font-size: 1em;
  font-weight: normal;
}

.link-list span {
  font-style: italic;;
  font-size: 0.8em;
  color: gray;
}


/* --- category menu opener --- */
.menu-opener {
  display: none;
  padding: 15px;
  text-align: center;
  font-size: 1em;
}

@media screen and (max-width: 650px) {
  .menu-panel {
    position: fixed;
    width: 100%;
    top: 0;
  }

  .menu-opener {
    display: block;
    background: white;
  }

  .category-menu {
    display: none;
    background: white;
  }

  .content {
    margin-top: 30px;
  }
}

/* open/close category menu */
.hide {
  display: none;
}

.show {
  display: block;
}

